--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-{% for note in notes %}
-    <div>
-    <p>{{ note.body }}</p>
-    <a href="{% url 'note_detail' note.pk %}">>>></a>
-    </div>
-{% endfor %}
+<h1>Welcome</h1>
+<p>New here sign up</p>
+<p>Already own an account login</p>
 {% endblock content %}
