--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Log in</h1>
-<form action="" method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Log In</button>
-</form>
+    <h2>Login</h2>
+
+    <form action="" method="post">
+        {% csrf_token %}
+
+        {{ form.as_p }}
+        <button type="submit">Login</button>
+    </form>
 {% endblock content %}
