--- a/templates/home.html
+++ b/templates/home.html
@@ -2,6 +2,5 @@
 
 {% block content %}
 <h1>Welcome</h1>
-<p>New here sign up</p>
-<p>Already own an account login</p>
+Welcome
 {% endblock content %}
