--- a/templates/base.html
+++ b/templates/base.html
@@ -10,19 +10,31 @@
 <body>
     <header>
         <div>
-          <a href="{% url 'home' %}"><h1>TAKE NOTE</h1></a>
-            
+
+            {% if user.is_authenticated %}
+            <a href="{% url 'note' %}">
+                <h1>TAKE NOTE</h1>
+            </a>
+
+            {% else %}
+            <a href="{% url 'home' %}">
+                <h1>TAKE NOTE</h1>
+            </a>
+            {% endif %}
         </div>
+
+        {% if user.is_authenticated %}
         <a href="{% url 'new_note' %}">New note</a>
+        {% endif %}
     </header>
 
     {% if user.is_authenticated %}
-        <p>Hi {{ user.username }}!</p>
-        <p><a href="{% url 'logout' %}">Log out</a></p>
+    <p>Hi {{ user.username }}!</p>
+    <p><a href="{% url 'logout' %}">Log out</a></p>
     {% else %}
-        <p>You are not logged in.</p>
-        <a href="{% url 'login' %}">Log In</a>
-        <a href="{% url 'signup' %}">Sign Up</a>
+    <p>You are not logged in.</p>
+    <a href="{% url 'login' %}">Log In</a>
+    <a href="{% url 'signup' %}">Sign Up</a>
     {% endif %}
 
 
