--- a/templates/note_detail.html
+++ b/templates/note_detail.html
@@ -2,7 +2,9 @@
 
 {% block content %}
     <div>
+        {{ note_detail.title }}
         {{ note_detail.body }}
+        {{ note_detail.date_updated }}
     </div>
 
     
